# sample-spec-driven-presentation-maker

./: .ash.yaml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_ja.md  buildspec.yml
.claude-plugin/: marketplace.json  plugin.json
agent/: Dockerfile  README.md  README_ja.md  basic_agent.py  composition.py  cost_logger.py  factory.py  mantle_client.py  mcp_clients.py  model_profiles.py  requirements.txt  resilience.py  session.py  streaming.py
agents/: sdpm-composer.md
api/: common.py  index.py  requirements.txt
docs/en/: cost.md  (+7 more)
infra/: config.example.yaml
mcp-local/: .gitignore  README.md  compose.py  pyproject.toml  sandbox.py  sandbox_tools.py  server.py  server_acp.py  server_with_instruction.py  tools.py  upload_tools.py
mcp-local/.kiro/acp-agents/: sdpm-composer.json  sdpm-single.json  sdpm-spec.json  sdpm-style.json  sdpm-vibe.json
mcp-local/.kiro/agents/: sdpm-composer.json  sdpm-spec.json  sdpm-vibe.json
mcp-local/.kiro/settings/: cli.json
mcp-local/acp-agent-prompts/: composer.md  single-agent.md  spec-agent.md  style-creator.md  vibe-agent.md
mcp-server/: README.md  pyproject.toml  server.py  server_utils.py
mcp-server/storage/: __init__.py  aws.py
mcp-server/tools/: attachment.py  generate.py  init.py  kb_sync.py  preview.py  reference.py  sandbox.py  template.py  upload.py
prompts/: composer-agent.md  spec-agent.md
scripts/: deploy.sh  deploy_webui.sh  upload_assets.py
shared/: __init__.py  ingest.py  preview.py
tests/: test_checks_font_size.py  test_checks_overlay_textbox.py  test_download_aws_icons.py  (+6 more)
(+161 files in other folders)
